--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink:        pretty
 
 
 # Setup
-title:            Gerrymandering and Computational Redistricting
+title:            Districting Plan Evaluation
 tagline:          ''
 description:      'A 2021 Data Science for Social Good summer fellowship project at the University of Washington' 
 url:              "https://uwescience.github.io"
