--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink:        pretty
 
 
 # Setup
-title:            Districting Plan Evaluation
+title:            Redistricting 
 tagline:          ''
 description:      'A 2021 Data Science for Social Good summer fellowship project at the University of Washington' 
 url:              "https://uwescience.github.io"
